Restructured the project

--- a/templates/missionary_work/website_guide_part2.html
+++ b/templates/missionary_work/website_guide_part2.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'shared/base.html' %}
 
 {% block title %}Website Guide - Features & Pages - Pastor Prince Obasi-Ike{% endblock %}
 
