--- a/templates/missionary_work/website_guide.html
+++ b/templates/missionary_work/website_guide.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'shared/base.html' %}
 
 {% block title %}Website Guide - Pastor Prince Obasi-Ike{% endblock %}
 
