--- a/templates/missionary_work/website_guide_part4.html
+++ b/templates/missionary_work/website_guide_part4.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% extends 'shared/base.html' %}
 
 {% block title %}Website Guide - Contact Information - Pastor Prince Obasi-Ike{% endblock %}
 
