Added more photos on home page

--- a/templates/missionary_work/home.html
+++ b/templates/missionary_work/home.html
@@ -1099,7 +1099,7 @@
             <div class="grid grid-cols-1 md:grid-cols-2 gap-0">
                 <!-- Image Side -->
                 <div class="relative h-full min-h-[350px] md:min-h-full">
-                    <img src="{% static 'images/sliders/global missions1.jpg' %}" class="absolute inset-0 w-full h-full object-cover object-center">
+                    <img src="{% static 'images/sliders/global_missions1.jpg' %}" class="absolute inset-0 w-full h-full object-cover object-center">
                     <div class="absolute inset-0 bg-gradient-to-r from-mission-brown/70 to-transparent flex flex-col justify-center p-8 md:hidden">
                         <h2 class="text-3xl font-bold mb-4 text-white">Support Our Mission</h2>
                         <p class="text-lg text-white/90">Join us in transforming lives across Africa.</p>
