--- a/templates/shared/footer.html
+++ b/templates/shared/footer.html
@@ -1,4 +1,4 @@
-<!-- Modern Corporate Footer -->
+{% load static %}
 <footer class="relative pt-20 pb-10 overflow-hidden">
     <!-- Background Elements -->
     <div class="absolute inset-0 bg-gradient-to-b from-mission-brown to-mission-dark"></div>
@@ -8,7 +8,7 @@
 
     <!-- World Map Background -->
     <div class="absolute inset-0 opacity-5 pointer-events-none">
-        <img src="https://images.unsplash.com/photo-1541872703-74c5e44368f9?ixlib=rb-4.0.3&auto=format&fit=crop&w=1920&q=80" alt="Africa Map Background" class="w-full h-full object-cover">
+        <img src="{% static 'images/sliders/footer.jpg' %}">
     </div>
 
     <div class="container mx-auto px-4 relative z-10">
